// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index renders the index page 1`] = `
"
<!DOCTYPE html>
<html>
  <head>
    <title>Typescript Node MVC Template</title>

    <meta charset=\\"utf-8\\" />
  </head>

  <body>
    
Hello World! Running on test

  </body>
</html>
"
`;

exports[`index renders the index page localized 1`] = `
"
<!DOCTYPE html>
<html>
  <head>
    <title>Template MVC com Typescript e Node</title>

    <meta charset=\\"utf-8\\" />
  </head>

  <body>
    
Olá Mundo! Rodando em test

  </body>
</html>
"
`;
